--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ main{
 
  border-radius: 2px; 
  background-size: 35px 20px, 100% 100%, 100% 100%;
- font-size: 2rem;
+ font-size: 2.5rem;
 
 }
 
@@ -67,10 +67,35 @@ main{
     width: calc(100% / 4);
     text-align: center;
 }
+
+.input-group input{
+    font-size: 1.5rem;
+    text-align: center;
+    background-image:
+    -webkit-linear-gradient(-45deg, 
+                            transparent 33%, rgba(0, 0, 0, .1) 33%, 
+                            rgba(0,0, 0, .1) 66%, transparent 66%),
+    -webkit-linear-gradient(top, 
+                            rgba(255, 255, 255, .25), 
+                            rgba(0, 0, 0, .25)),
+    -webkit-linear-gradient(left, rgb(46, 201, 15), rgb(218, 157, 28));
+}
+
+.input-group label{
+    font-size: 1.5rem;
+}
+
 .input-group button{
-    border-color: #09c;
     border-radius: 20px;
-    padding: 5px 20px;
+    padding: 5px 30px;
+    background-image:
+    -webkit-linear-gradient(-45deg, 
+                            transparent 33%, rgba(0, 0, 0, .1) 33%, 
+                            rgba(0,0, 0, .1) 66%, transparent 66%),
+    -webkit-linear-gradient(top, 
+                            rgba(255, 255, 255, .25), 
+                            rgba(0, 0, 0, .25)),
+    -webkit-linear-gradient(left, rgb(15, 101, 180), rgb(218, 157, 28));
 }
 
 .ticket-results-container{
