--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ main{
 
 .container{
     width: 70%;
-    height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,7 +49,7 @@ main{
 }
 
 .form-container{
-    width: 100%;
+    width: 80%;
     height: 50%;
     margin-top: 5rem;
     display: flex;
@@ -59,7 +58,7 @@ main{
 }
 
 .checkout-container{
-    height: 47%;
+    height: 50%;
     width: 100%;
 }
 
@@ -69,7 +68,8 @@ main{
 }
 
 .input-group input{
-    font-size: 1.5rem;
+    width: 100% ;
+    height: 25px;
     text-align: center;
     background-image:
     -webkit-linear-gradient(-45deg, 
@@ -86,8 +86,9 @@ main{
 }
 
 .input-group button{
+    margin: 5rem 0;
     border-radius: 20px;
-    padding: 5px 30px;
+    padding: 5px 20px;
     background-image:
     -webkit-linear-gradient(-45deg, 
                             transparent 33%, rgba(0, 0, 0, .1) 33%, 
@@ -101,6 +102,7 @@ main{
 .ticket-results-container{
     width: 100%;
     display: flex;
+    margin-bottom: 5rem;
 }
 .info-box{
     width: 25%;
@@ -122,4 +124,23 @@ main{
  border-radius: 2px; 
  background-size: 35px 20px, 100% 100%, 100% 100%;
  font-size: 2rem;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .form-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .input-group{
+        width:  100%;
+    }
+    .input-group input{
+        font-size: 1rem;
+    }
+
+    .input-group button{
+        margin: 5px 0;
+    }
+    
 }
