--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-image: url(../img/Thomas.jpg);
+    background-size: cover;
+}
 
 .t-align-c{
     text-align: center;
 }
 
 main{
-    width: 100vw;
-    height: 100vh;
-    background-image: url(../img/Thomas.jpg);
-    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 5rem 0;
 }
 
 .container{
@@ -28,11 +29,10 @@ main{
     border-radius: 15px;
     color: white;
     position: relative;
+    padding: 30px 0 ;
 }
 
 #treniThomas{
-    position: absolute;
-    top: 2%;
     background-image:
     -webkit-linear-gradient(-45deg, 
                             transparent 33%, rgba(0, 0, 0, .1) 33%, 
@@ -45,12 +45,10 @@ main{
  border-radius: 2px; 
  background-size: 35px 20px, 100% 100%, 100% 100%;
  font-size: 2.5rem;
-
 }
 
 .form-container{
     width: 80%;
-    height: 50%;
     margin-top: 5rem;
     display: flex;
     justify-content: center;
@@ -58,18 +56,22 @@ main{
 }
 
 .checkout-container{
-    height: 50%;
     width: 100%;
 }
 
 .input-group{
-    width: calc(100% / 4);
+    width: calc(100% / 2);
     text-align: center;
+    padding: 0 10px;
+    margin-top: 1rem;
 }
 
 .input-group input{
     width: 100% ;
-    height: 25px;
+    color: white;
+    font-size: 1.5rem;
+    padding: 5px 0;
+    border-radius: 20px;
     text-align: center;
     background-image:
     -webkit-linear-gradient(-45deg, 
@@ -128,6 +130,7 @@ main{
 
 
 @media screen and (max-width: 1200px) {
+
     .form-container{
         flex-direction: column;
         align-items: center;
@@ -139,8 +142,13 @@ main{
         font-size: 1rem;
     }
 
-    .input-group button{
-        margin: 5px 0;
+    .ticket-results-container{
+        flex-direction: column;
+        align-items: center;
+       
     }
-    
+
+    .info-box{
+        width: 80%
+    }
 }
